# dove

./: Cargo.toml  README.md  TODO  askama.toml
old-src/: new-post-template.md
old-src/feed/: atom.rs
old-src/posts/: metadata.rs  mod.rs  post.rs
old-src/renderer/: index.rs  mod.rs  status.rs  templates.rs
src/: fs.rs  img.rs  logger.rs  main.rs  msg.rs  net.rs  new-template.md  parser.rs  postiter.rs  transformer.rs
src/engine/: mod.rs  renderer.rs  templates.rs
src/feed/: atom.rs
src/mini/: css.rs  html.rs  js.rs  mod.rs
src/posts/: cache.rs  iter.rs  metadata.rs  mod.rs  post.rs
src/renderer/: archive.rs  html.rs  minimize.rs  mod.rs  post.rs  templates.rs
static/css/: archive.css  common.css  index.css  normalize.css  post.css
static/js/: archive.js
templates/: 404.html  archive.html  index.html
templates/feed/: atom.xml  atom_entry.xml
templates/post/: bibliography.html  blank_line.html  bold.html  categories.html  cite.html  codeblock.html  emphasis.html  figure.html  footer.html  header.html  headline.html  link.html  list_item.html  ordered_list.html  paragraph.html  quote.html  strikethrough.html  subheading.html  table.html  table_cell.html  table_head.html  table_row.html  tag.html  text.html  unordered_list.html
templates/test/: content.html
test-data/postmeta/: mirror.md  test.md  title.md
test-data/renderer/: example.md
