[package]
name = "dove"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
memmap2 = "0.7"
pulldown-cmark = "0.9"
askama = "0.12"
minify-html-onepass = "0.11"
css-minify = "0.3"
minify-js = "0.5"
mimalloc = { version = "0.1", default-features = false }
indicatif = "0.17"
colored = "2.0"
webp = "0.3"
image = "0.25"
