[package]
name = "dove"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
memmap2 = "0.9"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
askama = "0.14"
minify-html-onepass = "0.16"
css-minify = "0.5"
minify-js = "0.5"
mimalloc = "0.1"
webp = "0.3"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
curl = "0.4"
notify = "8.1"
chrono = "0.4"
